# nama

./: .gitignore  .jupytext.toml  CONTRIBUTING.md  Dockerfile  Makefile  README.md  environment.yml  mkdocs.yml  pyproject.toml  remote-install.sh  requirements.txt  setup.py
.devcontainer/: devcontainer.json
docs/: Makefile  commands.rst  conf.py  index.md  index.rst  make.bat  modules.md
notebooks/: 00_snorkel.ipynb  00_snorkel_names.ipynb  100_train_test_split.ipynb  101_sample_query_names.ipynb  102_baseline-Copy1.ipynb  102_baseline.ipynb  103_bucketize_nama.ipynb  104_cluster.ipynb  105_cluster_greedy.ipynb  105_cluster_greedy_given.ipynb  106_analyze_nicknames.ipynb  10_clean.ipynb  11_clean_preferred.ipynb  12_analyze_preferred.ipynb  200_generate_phonemes.ipynb  200_generate_triplets.ipynb  201_generate_ngrams.ipynb  201_generate_phonemes.ipynb  202_generate_ngrams.ipynb  203_generate_anchor_pos_neg_triplets.ipynb  203_generate_bpe_tokenizer.ipynb  204_generate_subword_tokenizer.ipynb  204_generate_subwords.ipynb  205_analyze_triplets.ipynb  205_augment_non_negatives.ipynb  205_bi_encoder_margin_mse_loss.ipynb  205_clean_training_data.ipynb  205_generate_common_non_negatives.ipynb  206_analyze_triplets.ipynb  206_bi_encoder_margin_mse_loss.ipynb  206_bi_encoder_mse_loss.ipynb  207_augment_triplets.ipynb  207_bi_encoder_mse_loss.ipynb  208_bi_encoder_margin_mse_loss.ipynb  209_bi_encoder_mse_loss.ipynb  20_generate_pairs.ipynb  210_create_subclusters.ipynb  211_analyze_subclusters.ipynb  212_analyze_inter_cluster_similarity.ipynb  220_create_language_model_dataset.ipynb  (+109 more)
old/: remote-install.sh  setup.py  test_environment.py
references/: basenames-20100616.txt  common_pairs.txt  given_missing_anchor_pos.txt  given_variants_clorinda_reviewed.tsv  givenname_nicknames.csv  givenname_nicknames.txt  surname_variants_clorinda_reviewed.tsv
reports/: 51_baseline_existing_fns_anc.ipynb  60_compare-anc-2021-11-01.ipynb  80_cluster_tune_surname2.ipynb  81_cluster_levenshtein-anc.ipynb  81_cluster_surnames.ipynb  90_compare_coders_surname.ipynb  90_compare_coders_surname2.ipynb  average-0.5-none-0.txt  average-0.6-none-0.txt  average-0.65-log10.txt  average-0.65-none-0.txt  average-0.65-none.txt  average-0.7-log10.txt  average-0.7-none-0.txt  average-0.75-log10.txt  average-0.75-none-0.txt  average-0.75-none.txt  average-0.8-log10.txt  average-0.8-none-0.txt  average-0.8-none.txt  average-0.83-none-0.txt  average-0.85-log10.txt  average-0.85-none-0.txt  average-0.85-none.txt  average-0.92-log10-10.txt  average-0.92-none-10.txt  average-3.8-log10-10.txt  average-3.9-log10-10.txt  complete-0.85-none.txt  complete-0.95-none.txt  complete-1.0-none.txt  (+6 more)
(+65 files in other folders)
